
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef char u_char ;


 char IAC ;
 char SB ;
 char SE ;

int
strip_telopts(u_char *buf, int len)
{
  int i, j, subopt = 0;
  char *p;

  for (i = j = 0; i < len; i++) {
    if (buf[i] == IAC) {
      if (++i >= len) break;
      else if (buf[i] > SB)
 i++;
      else if (buf[i] == SB) {
 p = buf + i + 1;
 subopt = 1;
      }
      else if (buf[i] == SE) {
 if (!subopt) j = 0;
 subopt = 0;
      }
    }
    else if (!subopt) {

      if (buf[i] == '\r' && i + 1 < len && buf[i + 1] != '\n')
 buf[j++] = '\n';

      else if (buf[i] != '\0')
 buf[j++] = buf[i];
    }
  }
  buf[j] = '\0';

  return (j);
}
